objects/Channel_Partner_Business_Plan_Info__c.object
<CustomObject>
    <description>Created mirror object for Channel Partner Business Plan having 1.1 relationship between them for BR 4465 Release 4.7.0.0</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added account lookup for BR 4465 R 4.7.0.0</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Partner Business Plans (Account)</relationshipLabel>
        <relationshipName>Channel_Partner_Business_Plans_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU_s_Covered__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.BU_s_Covered__c</formula>
        <label>BU&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Name__c</fullName>
        <description>Created formula field: custom hyperlink for BR 4465 R 4.7.0.0</description>
        <formula>HYPERLINK(&apos;/apex/FindingChannelPartnerBusinessPlanInfo?Id=&apos;+Id, Channel_Partner_Business_Plan__r.Name)</formula>
        <label>Business Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.Primary_Channel_Class__c</formula>
        <label>Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created Channel Partner Business Plan lookup for BR 4465 R 4.7.0.0</description>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Channel Partner Business Plans Info</relationshipLabel>
        <relationshipName>Channel_Partner_Business_Plans_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.Current_Year__c</formula>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.Division__c</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.Owner:User.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.Owner:User.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_s_Covered__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.PG_s_Covered__c</formula>
        <label>PG&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>TEXT(Channel_Partner_Business_Plan__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Completeness_Rate__c</fullName>
        <description>Created formula field for BR 4465 R 4.7.0.0</description>
        <formula>Channel_Partner_Business_Plan__r.Total_Completeness_Rate__c</formula>
        <label>Total Completeness Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Channel Partner Business Plan Info</label>
    <nameField>
        <displayFormat>CHPBPI-{0000000}</displayFormat>
        <label>Channel Partner Business Plan Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Partner Business Plans Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>